<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/detalles"
    tools:context=".activities.ModificarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_receta"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/foodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/primaryText"
        android:inputType="text"
        android:layout_margin="10dp"
        android:hint="@string/nombre"/>

    <EditText
        android:id="@+id/foodDesc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/pasos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foodPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/imgscroll"
            android:src="@drawable/img_default" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/selecciona"
            android:onClick="seleccionarFoto"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="actualizarReceta"/>
</LinearLayout>