<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".ui.form.FormFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/food"
        android:contentDescription="@string/imgscroll"/>

    <EditText
        android:id="@+id/foodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:hint="@string/nombre"
        android:textColorHint="@color/primaryLight"
        android:inputType="text"
        android:textColor="@color/primaryLight"/>

    <EditText
        android:id="@+id/foodDesc"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textColorHint="@color/primaryLight"
        android:hint="@string/descripcion"
        android:textColor="@color/primaryLight"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foodPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/imgscroll"
            android:src="@drawable/img_default" />

        <Button
            android:id="@+id/seleccionFoto"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/selecciona"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <Button
        android:id="@+id/guardarReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_margin="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
</LinearLayout>