<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/detalles"
    tools:context=".activities.DetallesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalles_receta"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="@color/primaryText" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#5D4037"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:src="@drawable/img_default"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/imgscroll" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/primaryLight"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:scrollbarStyle="outsideInset">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textStyle="italic"
                    android:textColor="@color/primaryLight"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"/>
            </ScrollView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_accent"
                android:text="@string/eliminar_receta"
                android:textColor="@color/primaryLight"
                android:textSize="18sp"
                android:onClick="eliminarReceta"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/primaryLight"
                android:background="@drawable/button_primary"
                android:layout_marginBottom="10dp"
                android:onClick="modificarReceta"
                android:text="@string/modificar_receta"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>